[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scene 1/Assets/bulkhead-wallsx1.png" type="Texture" id=1]
[ext_resource path="res://Scene 1/Line.gd" type="Script" id=2]
[ext_resource path="res://Font/Poco.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 29
extra_spacing_top = -14
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 29
extra_spacing_top = -13
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 559.0 ]
}

[node name="Button" type="Button" parent="."]
anchor_left = 0.092
anchor_top = 0.891
anchor_right = 0.092
anchor_bottom = 0.891
margin_left = -52.208
margin_top = -22.6
margin_right = 52.792
margin_bottom = 22.4
custom_fonts/font = SubResource( 1 )
text = "Back"

[node name="Button2" type="Button" parent="."]
margin_left = 876.0
margin_top = 510.0
margin_right = 981.0
margin_bottom = 557.0
custom_fonts/font = SubResource( 2 )
text = "NEXT"

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[connection signal="draw" from="." to="." method="_on_Control_draw"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
